--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Personal website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hngu/hackadventures.git"
   },
   "author": "Huy Ngu",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/hngu/hackadventures/issues"
   },
